Prevent the media path wrapping in the navbar

--- a/src/styles/piaf.scss
+++ b/src/styles/piaf.scss
@@ -11,6 +11,7 @@ $form-range-thumb-bg:             $gray-700;
 // Piaf-specific bits
 
 .banner-path-item:not(:first-child)::before {
+    display: inline-block;
     content: "/";
     margin-left: 8px;
     margin-right: 8px;
@@ -19,6 +20,14 @@ $form-range-thumb-bg:             $gray-700;
 nav + div {
     margin-top: 64px;  // is also updated by JS
     margin-bottom: 80px;
+}
+
+div.navbar-nav {
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    justify-content: center;
+    text-overflow: ellipsis;
 }
 
 .piaf-media-table {
